Mon May 27 13:18:51 UTC 2002  Don Hinton <dhinton@ieee.org>

	* ace/OS.i (mkstemp):

	  Implemented this method in terms of ::mktemp for platforms
	  that have ::mktemp.  It's used in ACE_DLL::set_handle()--may
	  need to rethink that implementation or implement ::mktemp
	  emulation for those platforms lacking it.

	* ace/ace_dll.dsp:
	* ace/ace_lib.dsp:

	  Added DLL_Manager.{h,cpp} files.

	* tests/Framework_Component_DLL.dsp:
	* tests/tests.dsw:

	  Added new dsp for Framework_Component_DLL.

	* tests/Framework_Component_DLL.cpp:
	  
	  Added missing ACE_FACTORY_DECLARE calls.

Mon May 27 08:24:29 UTC 2002  Don Hinton <dhinton@ieee.org>
	
	* tests/Makefile.bor:
	* tests/Framework_Component_DLL.bor:  

	  Added/edited Borland makefiles for Framework_Component_Test dll.

	* ace/Makefile.bor: Added DLL_Manager.
	
	* ace/Parse_Node.cpp:
	* ace/Service_Config.cpp:

	  Changed ACE_OS::ldname() calls to ACE::strnew() since
	  ACE_DLL::symbol() handles calling ACE_OS::ldname().

Sun May 26 22:18:03 UTC 2002  Don Hinton  <dhinton@ieee.org>

	* tests/Logging_Strategy_Test.cpp:

	  Changed ACE_AS_STATIC_LIBS to ACE_HAS_STATIC_LIBS, and 
	  added a process_directive call to "remove Logger" in order
	  make sure all the error messages get written to the log--
	  this helped debug the ACE_DLL changes below.
	
	* tests/Framework_Component_Test.cpp:

	  Broke the test out into its own function so it could be called
	  with different parameters and test all the combinations of the
	  PER_PROCESS/DLL and EAGER/LAZY dll unloading strategies.
	
	* tests/Framework_Component_DLL.cpp:

	  Removed Simple_Service::dll_name() method and added name()
	  method.
	
	* tests/DLL_Test.{h,cpp]:

	  Added test of set/get_handle() functionality.  And reorganized
	  the test into handle_test() and basic_test() methods, as well as
	  adding some ACE_TRACE statements.
	
	* ace/Singleton.{h,i,cpp}:

	  Made ACE_DLL_Singleton_T not inherit from ACE_Singleton and